--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -4,7 +4,6 @@
     left: 0;
     width: 100%;
     background-color: #333;
-    text-align: center;
 }
 .navbar li{
     padding: 0 30px;
@@ -54,7 +53,7 @@
     float: right;
 }
 .contact {
-    margin-left: 29em;
+    padding: 14px 16px;
     font-size: xx-large;
 }
 .contact a:hover{
