--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,9 +1,51 @@
+#profile-pic{
+    position: relative;
+    top: 45px;
+    height: 300px;
+    width: autopx;
+    padding: 20px;
+}
+
+.typing {
+    animation: type 10s steps(15);
+    animation-iteration-count: infinite;
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 5px solid black;
+    width: 15ch;
+    font-size: 10vw;
+    margin: 0;
+    position: absolute;
+    top: 25%;
+    left: 60%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+  }
+  @keyframes type{
+    0% {
+      width: 0ch;
+    }
+    100% {
+      width: 15ch;
+    }
+  }
+.typing h1{
+    font-size: 10vw;
+    margin: 0;
+    position: absolute;
+    top: 25%;
+    left: 40%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+  
 .navbar {
     position: fixed;
+    z-index: 100;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #111;
 }
 .navbar li{
     padding: 0 30px;
@@ -31,8 +73,11 @@
     height: 300px;
     width: autopx;
     padding: 10px;
+
 }
 .info-section{
+    position: relative;
+    top: 30px;
     padding: 0px 10px;
 }
 .info-section p {
